# log-replay

./: CMakeLists.txt  README.md
include/logrep/format/: record.hpp
include/logrep/recorder/: recorder.hpp
include/logrep/replay/: player.hpp
tests/: test_logrep.cpp
